parser/src/snapshots/rustpython_parser__string__tests__parse_fstring_not_nested_spec.snap
---
source: parser/src/string.rs
expression: parse_ast
---
[
    FormattedValue(
        ExprFormattedValue {
            value: Name(
                ExprName {
                    id: Identifier(
                        "foo",
                    ),
                    ctx: Load,
                    range: 3..6,
                },
            ),
            conversion: Int(
                0,
            ),
            format_spec: Some(
                JoinedStr(
                    ExprJoinedStr {
                        values: [
                            Constant(
                                ExprConstant {
                                    value: Str(
                                        "spec",
                                    ),
                                    kind: None,
                                    range: 0..13,
                                },
                            ),
                        ],
                        range: 0..13,
                    },
                ),
            ),
            range: 0..13,
        },
    ),
]
