parser/src/snapshots/rustpython_parser__string__tests__parse_fstring_self_doc_trailing_space.snap
---
source: parser/src/string.rs
expression: parse_ast
---
[
    Attributed {
        custom: (),
        node: Constant(
            ExprConstant {
                value: Str(
                    "x=",
                ),
                kind: None,
                range: 0..10,
            },
        ),
    },
    Attributed {
        custom: (),
        node: Constant(
            ExprConstant {
                value: Str(
                    "   ",
                ),
                kind: None,
                range: 0..10,
            },
        ),
    },
    Attributed {
        custom: (),
        node: FormattedValue(
            ExprFormattedValue {
                value: Attributed {
                    custom: (),
                    node: Name(
                        ExprName {
                            id: Identifier(
                                "x",
                            ),
                            ctx: Load,
                            range: 3..4,
                        },
                    ),
                },
                conversion: Int(
                    114,
                ),
                format_spec: None,
                range: 0..10,
            },
        ),
    },
]
