parser/src/snapshots/rustpython_parser__string__tests__parse_fstring_yield_expr.snap
---
source: parser/src/string.rs
expression: parse_ast
---
[
    Attributed {
        custom: (),
        node: FormattedValue(
            ExprFormattedValue {
                value: Attributed {
                    custom: (),
                    node: Yield(
                        ExprYield {
                            value: None,
                            range: 3..8,
                        },
                    ),
                },
                conversion: Int(
                    0,
                ),
                format_spec: None,
                range: 0..10,
            },
        ),
    },
]
