parser/src/snapshots/rustpython_parser__string__tests__parse_string_concat.snap
---
source: parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            value: Constant(
                ExprConstant {
                    value: Str(
                        "Hello world",
                    ),
                    kind: None,
                    range: 0..16,
                },
            ),
            range: 0..16,
        },
    ),
]
