parser/src/snapshots/rustpython_parser__string__tests__parse_string_triple_quotes_with_kind.snap
---
source: parser/src/string.rs
expression: parse_ast
---
[
    Attributed {
        custom: (),
        node: Expr(
            StmtExpr {
                value: Attributed {
                    custom: (),
                    node: Constant(
                        ExprConstant {
                            value: Str(
                                "Hello, world!",
                            ),
                            kind: Some(
                                "u",
                            ),
                            range: 0..20,
                        },
                    ),
                },
                range: 0..20,
            },
        ),
    },
]
