parser/src/snapshots/rustpython_parser__string__tests__parse_u_f_string_concat_1.snap
---
source: parser/src/string.rs
expression: parse_ast
---
[
    Attributed {
        custom: (),
        node: Expr(
            StmtExpr {
                value: Attributed {
                    custom: (),
                    node: JoinedStr(
                        ExprJoinedStr {
                            values: [
                                Attributed {
                                    custom: (),
                                    node: Constant(
                                        ExprConstant {
                                            value: Str(
                                                "Hello world",
                                            ),
                                            kind: Some(
                                                "u",
                                            ),
                                            range: 0..18,
                                        },
                                    ),
                                },
                            ],
                            range: 0..18,
                        },
                    ),
                },
                range: 0..18,
            },
        ),
    },
]
