parser/src/snapshots/rustpython_parser__string__tests__parse_u_string_concat_2.snap
---
source: parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            value: Constant(
                ExprConstant {
                    value: Str(
                        "Hello world",
                    ),
                    kind: Some(
                        "u",
                    ),
                    range: 0..17,
                },
            ),
            range: 0..17,
        },
    ),
]
