parser/src/snapshots/rustpython_parser__string__tests__raw_byte_literal_1.snap
---
source: parser/src/string.rs
expression: parse_ast
---
[
    Attributed {
        custom: (),
        node: Expr(
            StmtExpr {
                value: Attributed {
                    custom: (),
                    node: Constant(
                        ExprConstant {
                            value: Bytes(
                                [
                                    92,
                                    120,
                                    49,
                                    122,
                                ],
                            ),
                            kind: None,
                            range: 0..8,
                        },
                    ),
                },
                range: 0..8,
            },
        ),
    },
]
